--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
 
         <div class="row">
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
+                <img src="img/Menu/1.png" alt="Espresso" class="menu-card-img">
                 <h3 class="menu-card-title">- Espresso -</h3>
                 <p class="menu-card-price"> Harga : IDR 15K</p>
             </div>
