--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kopi Tanpa Kembung</title>
+    <title>Stevanus Blogspot</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,18 +23,18 @@
 <body>
     <!-- navbar start -->
     <nav class="navbar">
-        <a href="#" class="navbar-logo">Kenangan<span>Senja</span>.</a>
+        <a href="#" class="navbar-logo">tepen<span>Blog</span>.</a>
 
         <div class="navbar-nav">
             <a href="#home">Home</a>
-            <a href="#about">Tentang Kami</a>
-            <a href="#menu">Menu</a>
+            <a href="#about">Tentang Saya</a>
+            <a href="#menu">Keahlian</a>
             <a href="#contact">Kontak</a>
         </div>
 
         <div class="navbar-extra">
-            <a href="#" id="search"><i data-feather="search"></i></a>
-            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+            <!-- <a href="#" id="search"><i data-feather="search"></i></a>
+            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a> -->
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
     </nav>
@@ -43,25 +43,25 @@
     <!-- Hero Section Start -->
     <section class="hero" id="home">
         <main class="content">
-            <h1><span>Ngopi</span> Dulu Biar Gk Pusing</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, sapiente.</p>
-            <a href="#" class="cta">Beli Sekarang</a>
+            <h1><span>Welcomee!!!</span> di Blogspot Saya</h1>
+            <p>Meskipun baru percobaan pertama saya dan kelihatan apa adanya, tolong dinikmati.</p>
+            <!-- <a href="#" class="cta">Beli Sekarang</a> -->
         </main>
     </section>
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
     <section class="about" id="about">
-        <h2><span>Tentang</span> Kami</h2>
+        <h2><span>Tentang</span> Saya</h2>
 
         <div class="row">
             <div class="about-img" alt="Tentang Kami">
                 <img src="img/tentang-kami.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Kenapa Memilih Kopi Kami</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, molestias reiciendis cum nostrum neque vero.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt architecto illo quia hic maiores blanditiis ipsum eligendi vel at id.</p>
+                <h3>Stevanus Sesario Dwi Pramono</h3>
+                <p>Adalah seorang manusia yang hidup.</p>
+                <p>Dia juga seorang yang gemar bernafas, makan, dan minum.</p>
 
             </div>
         </div>
@@ -70,39 +70,29 @@
 
     <!-- Menu Section Start -->
     <section class="menu" id="menu">
-        <h2><span>Menu</span> Kami</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis doloremque</p>
+        <h2><span>Keahlian</span> Saya</h2>
+        <p>keahlian yang saya maksud disini adalah bahasa pemrograman yang sering saya gunakan</p>
 
         <div class="row">
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
+                <img src="img/menu/html.png" alt="HTML" class="menu-card-img">
+                <h3 class="menu-card-title">- HTML -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
+                <img src="img/menu/php.png" alt="PHP" class="menu-card-img">
+                <h3 class="menu-card-title">- PHP -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
+                <img src="img/menu/css.png" alt="CSS" class="menu-card-img">
+                <h3 class="menu-card-title">- CSS -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
+                <img src="img/menu/javascript.png" alt="Javascript" class="menu-card-img">
+                <h3 class="menu-card-title">- Javascript -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
-            </div>
-            <div class="menu-card">
-                <img src="img/menu/1.png" alt="Espresso" class="menu-card-img">
-                <h3 class="menu-card-title">- Espresso -</h3>
-                <p class="menu-card-price"> Harga : IDR 15K</p>
+                <img src="img/menu/sql.jpg" alt="SQL" class="menu-card-img">
+                <h3 class="menu-card-title">- SQL -</h3>
             </div>
         </div>
     </section>
@@ -110,11 +100,14 @@
 
     <!-- Contac Section Start -->
     <section class="contact" id="contact">
-        <h2><span>Kontak</span> Kami</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, fugit!</p>
-
+        <h2><span>Kontak</span> Saya</h2>
+        
         <div class="row">
+            <!-- <div class="social-media">
+                
+            </div> -->
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126646.209026842!2d112.6426428590167!3d-7.275614072018536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7fbf8381ac47f%3A0x3027a76e352be40!2sSurabaya%2C%20Surabaya%20City%2C%20East%20Java!5e0!3m2!1sen!2sid!4v1675226322418!5m2!1sen!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
             <form action="">
                 <div class="input-grup">
