bug fix menu img directory

--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
 
         <div class="row">
             <div class="menu-card">
-                <img src="img/menu/html.png" alt="HTML" class="menu-card-img">
+                <img src="img/Menu/html.png" alt="HTML" class="menu-card-img">
                 <h3 class="menu-card-title">- HTML -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/php.png" alt="PHP" class="menu-card-img">
+                <img src="img/Menu/php.png" alt="PHP" class="menu-card-img">
                 <h3 class="menu-card-title">- PHP -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/css.png" alt="CSS" class="menu-card-img">
+                <img src="img/Menu/css.png" alt="CSS" class="menu-card-img">
                 <h3 class="menu-card-title">- CSS -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/javascript.png" alt="Javascript" class="menu-card-img">
+                <img src="img/Menu/javascript.png" alt="Javascript" class="menu-card-img">
                 <h3 class="menu-card-title">- Javascript -</h3>
             </div>
             <div class="menu-card">
-                <img src="img/menu/sql.jpg" alt="SQL" class="menu-card-img">
+                <img src="img/Menu/sql.jpg" alt="SQL" class="menu-card-img">
                 <h3 class="menu-card-title">- SQL -</h3>
             </div>
         </div>
